# CinemaTickets

./: .gitignore  CMakeLists.txt  main.cpp
include/: CinemaManager.h  Concessionary.h  Customer.h  Group.h  Normal.h  Register.h  Screening.h  Seat.h  Ticket.h
src/: CinemaManager.cpp  Screening.cpp  Seat.cpp  Ticket.cpp  main.cpp
txtFiles/: screenings.txt
